// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpCenterPaywall should render the component correctly "for" Pro legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview pro col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge"
                >
                  Pro Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own help center in order to help users better understand your product and answer frequently asked questions.
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      class="wrapper primary medium"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          auto_awesome
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Advanced" legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge"
                >
                  Advanced Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own help center in order to help users better understand your product and answer frequently asked questions.
                  You can contact your customer success manager or do it from here to upgrade today!
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      class="wrapper primary medium"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          auto_awesome
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Basic" legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview basic col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge"
                >
                  Basic Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own help center in order to help users better understand your product and answer frequently asked questions.
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      class="wrapper primary medium"
                    >
                      <span
                        class="wrapper"
                      >
                        Upgrade Your Plan
                        <i
                          class="material-icons icon isRight medium"
                        >
                          auto_awesome
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Enterprise" legacy plan 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview enterprise col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="test-file-stub"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge"
                >
                  <i
                    class="material-icons mr-1"
                  >
                    warning
                  </i>
                  Legacy plan
                </div>
                <i
                  class="material-icons upgradeChevron"
                >
                  chevron_right
                </i>
                <div
                  class="badge"
                >
                  Enterprise Plan
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Change plans to activate your Help Center
              </h1>
              <div
                class="description"
              >
                <p>
                  Create your own help center in order to help users better understand your product and answer frequently asked questions.
                  Contact your customer success manager to upgrade today!
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="mb-5 d-inline-block"
                >
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <button
                      class="wrapper primary medium"
                    >
                      <span
                        class="wrapper"
                      >
                        Contact Us
                        <i
                          class="material-icons icon isRight medium"
                        >
                          auto_awesome
                        </i>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
